Fixed padding and left border of sidebar on mobile

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -12,7 +12,12 @@
   transition: all 0.3s;
   position: relative;
   z-index: 0;
-  border-left: 1px solid rgba(0, 0, 0, .05);
+
+  @media (min-width: 1200px) {
+    border-left: 1px solid rgba(0, 0, 0, .05);
+    padding-right: .5rem;
+    padding-left: .5rem;
+  }
 
   .card {
     padding: 1rem 0;
